k8s/services/observability/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: shopno-monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: http
